2007-12-06  Mathias Hasselmann  <mathias@openismus.com>

	Put idle sockets the cleanup iterator finds into a list, instead of
	directly disconnecting them. Disconnecting them triggers the
	"disconnected" signal, which causes the currently inspected socket
	getting removed from the currently iterated hash table - very bad.

	* libepc/publisher.c: Put idle clients into a list and disconnect
	them in epc_publisher_quit, instead of disconnecting them immediatly
	in epc_publisher_disconnect_idle_cb.

2007-12-06  Mathias Hasselmann  <mathias@openismus.com>

	Provide initial implementation of unique-service collision handling.

	* libepc/dispatcher.c: Add collision-handling and service-cookie
	properties. Provide initial implementation of unique-service
	collision handling.
	* libepc/dispatcher.h: Add EpcCollisionHandling enumeration.
	Add accessors for collision-handling and service-cookie properties.
	* libepc/publisher.c, libepc/publisher.h: Add collision-handling
	and service-cookie properties, which just forward to the dispatcher.
	* tests/test-publisher-unique.c: Test the unique service feature.
	* Makefile.am, tests/.gitignore: Add tests/test-publisher-unique.

2007-12-06  Mathias Hasselmann  <mathias@openismus.com>

	Correctly interpret protocol list passed to epc_service_monitor_new.
	Release the temporary service_types array.

	* libepc/service-monitor.c: Fix the issues mentioned above.

2007-12-06  Mathias Hasselmann  <mathias@openismus.com>

	Fix test-consumer-by-info to terminate.

	* tests/test-consumer-by-info.c: Remove epc_test_run() loop.

2007-12-04  Mathias Hasselmann  <mathias@openismus.com>

	* configure.ac: Bump version number.

2007-12-03  Mathias Hasselmann  <mathias@openismus.com>

	=== Release 0.3 ===

	* NEWS: Updated for release 0.3
	* README: Update gnutls version.

2007-12-03  Mathias Hasselmann  <mathias@openismus.com>

	Track client connections and disconnect clients in epc_publisher_quit
	to avoid leaking of HTTP servers.
